--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
    </div>
    <div class="list">
    <li><a href="#hme">Home</a></li>
-   <li><a href="#about">About us</a></li>
+   <li><a href="#about">About </a></li>
    <li><a href="#pjt">Projects</a></li>
-   <li><a href="#">Contact us</a></li>
+   <li><a href="#contact">Contact us</a></li>
    </div>
 </ul> 
 
@@ -62,8 +62,9 @@
  </div>
 
 
-<h1 id="about">About</h1>
+ <h1 id="about">About</h1>
  <div class="row_one" >
+  
   <div class="col">
     <div id="fast_box">
       <div><span class="mdi mdi-speedometer"></span></div>
@@ -92,7 +93,8 @@
 
 <div class="row_two">
   <div class="col-left">
-    <img src="images/html.webp" alt="html" width="70%">
+    <img src="images/html.webp" id="html5" alt="html" width="70%">
+    <img src="images/md.jpg" id="webdev" alt="men" width="70%">
   </div>
   <div class="col-right">
    <h1>My Skills</h1>
@@ -123,7 +125,6 @@
    </div>
   </div>
 </div>
-<div>
  
  <h1 id="project">What People Say</h1>
 <div class="row_four">
@@ -188,7 +189,6 @@
     <div> <img src="images/mysql.png" alt="a" > </div>
   
   </div>
-  </div>
   </section>
   
   <div class="row_three">
@@ -217,6 +217,27 @@
     </div>
   </div>
 
+  <section id="contact">
+    <div class="contact-container">
+      <h2>Contact Me</h2>
+      <p>You can reach me via the following contact details:</p>
+  
+      <address>
+        <p><strong>Email:</strong> <a href="mailto:chauhandavinder29@gmail.com">chauhandavinder29@gmail.com</a></p>
+        <p><strong>Phone:</strong> <a href="tel:+91 7508030850">+91 7508030850</a></p>
+      </address>
+  
+      <div class="social-links">
+        <a href="https://github.com/PUNEET786C" target="_blank">GitHub</a> |
+        <a href="https://linkedin.com/in/yourlinkedin" target="_blank">LinkedIn</a> |
+        <a href="https://twitter.com/yourtwitter" target="_blank">Insta</a>
+      </div>
+    </div>
+  </section>
+
+<footer>
+    <p>&copy; 2024 Puneet's </p>
+</footer>
 
  </body>
  </html>
