--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li><a href="#hme">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#pjt">Projects</a></li>
-      <li><a href="#">Contact us</a></li>
+      <li><a href="#contact">Contact us</a></li>
   </ul>
   <ul class="desktop_menu">
    <div class="brand_name">
