--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
       </div>
       <div class="user-bottom">
-       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid necessitatibus id consectetur saepe eum esse accusantium ipsum placeat rem error at culpa perspiciatis veritatis quos, quam asperiores nostrum deserunt repellendus dolores sint magni blanditiis quia? Necessitatibus et animi incidunt odit.</p>
+       <p>Working with Puneet was a game-changer for our online presence. He delivered a sleek, responsive website that not only looks amazing but also performs flawlessly across all devices. His attention to detail and timely updates made the whole process smooth and professional.</p>
       </div>
     </div>
   </div>
@@ -154,8 +154,7 @@
       </div>
       </div>
       <div class="user-bottom">
-       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid necessitatibus id consectetur saepe eum esse accusantium ipsum placeat rem error at culpa perspiciatis veritatis quos, quam asperiores nostrum deserunt repellendus dolores sint magni blanditiis quia? Necessitatibus et animi incidunt odit.</p>
-      </div>
+       <p>Puneet has an incredible knack for turning ideas into fully functional, visually stunning websites. He took our vague concept and turned it into a platform we’re proud of. Highly recommended for anyone who wants clean code, great UI/UX, and quick turnaround.</p></div>
     </div>
   </div>
 
@@ -169,8 +168,7 @@
       </div>
       </div>
       <div class="user-bottom">
-       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid necessitatibus id consectetur saepe eum esse accusantium ipsum placeat rem error at culpa perspiciatis veritatis quos, quam asperiores nostrum deserunt repellendus dolores sint magni blanditiis quia? Necessitatibus et animi incidunt odit.</p>
-      </div>
+       <p>We hired Puneet to revamp our outdated site, and the results were beyond expectations. From design to deployment, he was proactive, creative, and super easy to communicate with. Our traffic and user engagement have increased noticeably since the launch.</p></div>
     </div>
   </div>
 </div>
@@ -180,9 +178,9 @@
    <div class="owl-carousel my_carousel" id="pjt">                       
     <div> <img src="images/html.webp" alt="a" > </div>
     <div> <img src="images/css.png" alt="a" > </div>
-    <div> <img src="images/javascript.png" alt="a" > </div>
-    <div> <img src="images/bootstrap.jpeg" alt="a" > </div>
-    <div> <img src="images/jqurey.jpeg" alt="a" > </div>
+    <div> <img src="images/javascript.png" alt="a" ></div>
+    <div> <img src="images/bootstrap.jpeg" alt="a" ></div>
+    <div> <img src="images/jqurey.jpeg" alt="a" ></div>
     <div> <img src="images/ajax.jpeg" alt="a" > </div>
     <div> <img src="images/java.png" alt="a" > </div>
     <div> <img src="images/tailwindcss.png" alt="a" > </div>
